--- a/css/styles.css
+++ b/css/styles.css
@@ -176,3 +176,22 @@ body {
     width: 64px;
     height: 64px;
 }
+.nav-item {
+    display: flex;
+    align-items: center;
+    padding: 10px 0;
+    color: #1d1d1f;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.nav-item i {
+    margin-right: 10px;
+    font-size: 18px;
+    width: 20px;
+    text-align: center;
+}
+
+.nav-item:hover {
+    color: #0071e3;
+}
